@@ -63,7 +63,7 @@ ZBX_METRIC	parameters_common[]=
 
 	{"net.tcp.dns",		CF_USEUPARAM,	CHECK_DNS,		0,	",localhost"},
 	{"net.tcp.dns.query",	CF_USEUPARAM,	CHECK_DNS_QUERY,	0,	",localhost"},
-	{"net.tcp.port",	CF_USEUPARAM,	CHECK_PORT,		0,	",80"},
+	{"net.tcp.port",	CF_USEUPARAM,	NET_TCP_PORT,		0,	",80"},
 
 	{"system.hostname",	0,		SYSTEM_HOSTNAME,	0,	0},
 	{"system.uname",	0,		SYSTEM_UNAME,		0,	0},
